# JPPT

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.ko.md  README.md  pyproject.toml  ruff.toml  run.ps1  run.sh
.claude/: settings.local.json
config/: default.yaml  dev.yaml.example  prod.yaml.example
docs/: AGENTS.md.sample  FRAMEWORK_GUIDE.md  PRD.md  language-migration-blueprint.md  task.md
docs/examples/: core-structure-patterns.md
docs/plans/: 2026-02-03-python-project-template.md  2026-02-05-project-creation-script-design.md  2026-02-05-project-creation-script-implementation.md  2026-02-05-project-creation-script-testing.md  2026-02-10-change-log-path-to-home.md  2026-03-10-fastapi-template-upgrade.md  2026-03-10-jppt-template-sync-design.md  2026-03-10-jppt-template-sync.md  2026-03-14-create-app-early-dev-config.md  2026-03-14-create-app-enter-default-yes.md  2026-03-14-create-app-prd-guidance.md  2026-03-14-create-app-readme-task-exclusion.md  2026-03-14-create-app-success-output-cleanup.md  2026-03-14-create-app-telegram-design.md  2026-03-14-create-app-telegram-implementation.md  2026-03-14-generated-agents-design.md  2026-03-14-generated-agents-implementation.md  2026-03-14-telegram-silent-time.md  2026-03-15-remove-default-config-design.md  2026-03-15-remove-default-config.md
scripts/: create_app.ps1  create_app.sh  migrate_to_simple_config.sh  run.ps1  run.sh
src/: main.py
src/api/: __init__.py  app.py
src/jppt/: main.py
src/utils/: api_runner.py  app_runner.py  batch_runner.py  config.py  exceptions.py  http_client.py  logger.py  reload.py  retry.py  signals.py  telegram.py  (+1 more)
tests/: conftest.py  test_api.py  test_integration.py  test_main.py
(+24 files in other folders)
